--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ group = online.nasgar
 packageName = online.nasgar.announcer
 pluginName = Announcer
 author = Vicen621
-mcVersion = 1.18.1
+mcVersion = 1.18
 apiVersion = 1.18
-version = 1.0.0
+version = 1.0
+outputDir = C:\\Users\\vicen\\OneDrive\\Escritorio\\Servers\\Server 1.18 - copia\\plugins
