--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ buildscript {
 
 plugins {
     id 'com.github.johnrengelman.shadow' version '7.1.2'
-    id 'kr.entree.spigradle' version '2.4.2'
     id 'kr.entree.spigradle.bungee' version '2.4.2'
     id 'io.freefair.lombok' version '6.4.3'
     id 'java'
@@ -30,14 +29,6 @@ ext {
 
 group project.property("group")
 
-spigot {
-    name project.property("pluginName")
-    authors [project.property("author")]
-    version project.property("version")
-    apiVersion project.property("apiVersion")
-    load STARTUP
-}
-
 bungee {
     name project.property("pluginName")
     description 'Announcer plugin for Nasgar Network'
@@ -57,11 +48,11 @@ archivesBaseName = project.property("pluginName")
 repositories {
     mavenLocal()
     mavenCentral()
-    jitpack()
-    spigot()
+    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
+    maven { url 'https://jitpack.io' }
     maven { url = 'https://repo.aikar.co/content/groups/aikar/' }
     maven { url = 'https://repo.dmulloy2.net/repository/public/' }
-    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/public/' }
+    maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/public/' }
     maven { url = 'https://oss.sonatype.org/content/repositories/snapshots/' }
     maven {
         name = 'sonatype'
@@ -71,8 +62,8 @@ repositories {
 }
 
 dependencies {
-    compileOnly  spigot(mcVersion)
-    compileOnly  "net.md-5:bungeecord-api:${mcVersion}-R0.1-SNAPSHOT"
+    compileOnly "org.spigotmc:spigot-api:${mcVersion}-R0.1-SNAPSHOT"
+    compileOnly "net.md-5:bungeecord-api:${mcVersion}-R0.1-SNAPSHOT"
 
     // Annotation Command Framework: https://github.com/aikar/commands
     implementation "co.aikar:acf-paper:0.5.1-SNAPSHOT"
@@ -107,7 +98,6 @@ shadowJar {
 
 tasks.build.dependsOn(shadowJar)
 tasks.publish.dependsOn(shadowJar)
-tasks.prepareSpigotPlugins.dependsOn(shadowJar)
 
 test {
     useJUnitPlatform()
