--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ repositories {
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
     maven { url = 'https://repo.unnamed.team/repository/unnamed-public/' }
+    maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
 }
 
 dependencies {
@@ -75,6 +76,8 @@ dependencies {
     implementation 'me.yushust.message:core:7.0.0'
     implementation 'me.yushust.message:sourcetype-bukkit-yml:7.0.0'
     implementation 'me.yushust.message:sourcetype-bungee-yml:7.0.0'
+
+    implementation 'me.clip:placeholderapi:2.11.1'
 }
 
 shadowJar {
