--- a/src/main/resources/lang_en.yml
+++ b/src/main/resources/lang_en.yml
@@ -2,3 +2,4 @@ added:
   es: "Set spanish message to: &f{msg}"
   en: "Set english message to: &f{msg}"
 config-reloaded: "&aConfig reloaded!"
+prefix: "&b&lANNOUNCE&r &f"
