--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,5 @@ packageName = online.nasgar.announcer
 pluginName = Announcer
 author = Vicen621
 mcVersion = 1.19.2
+bungeeVersion = 1.19
 version = 1.2.1
